# 1126_ocr

./: CMakeLists.txt  README.md  demo.cpp
src/: OcrUtils.cpp
